--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "prettier": "2.2.1"
   }
 }
